feat: 테스트 이미지 업로드 기능 구현[roi 전용]
