# backend/src/features/roi/model/response/upload.go
@@ -1,0 +1,7 @@
+package response
+
+type ResUpload struct {
+	TotalFiles int `json:"total_files"`
+	Success    int `json:"success"`
+	Failed     int `json:"failed"`
+}
